--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,9 @@ dependencies:
   dio: ^3.0.10
   dio_http_cache: ^0.2.11
   hive: ^1.4.4+1
+  # path_provider: ^1.6.27
   provider: ^4.3.3
+  # sqflite: ^1.3.2+2
 
 dev_dependencies:
   flutter_test:
