--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,14 +23,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cached_network_image: ^2.5.0
   carousel_slider: ^2.3.1
   cupertino_icons: ^1.0.0
   dio: ^3.0.10
   dio_http_cache: ^0.2.11
   hive: ^1.4.4+1
-  # path_provider: ^1.6.27
   provider: ^4.3.3
-  # sqflite: ^1.3.2+2
 
 dev_dependencies:
   flutter_test:
