--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   dio: ^3.0.10
   dio_http_cache: ^0.2.11
   hive: ^1.4.4+1
+  # hive_flutter: ^0.3.1
+  path_provider: ^1.6.27
   provider: ^4.3.3
 
 dev_dependencies:
