--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,13 +29,15 @@ dependencies:
   dio: ^3.0.10
   dio_http_cache: ^0.2.11
   hive: ^1.4.4+1
-  # hive_flutter: ^0.3.1
+  hive_flutter: ^0.3.1
   path_provider: ^1.6.27
   provider: ^4.3.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.11.0
+  hive_generator: ^0.8.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
